styling and layout changes

--- a/index.html
+++ b/index.html
@@ -5,154 +5,168 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Landing Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Caesar+Dressing" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <!--USE DROPDOWN BAR FOR MOBILE  -->
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 top-black">
-                <ul>
-                    <li><a class="active" href="#bio">Bio</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#resume">Resume</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <h1 class="big-name"> Alexander Whipple</h1>
-            </div>
-        </div>
-        <div class="row soapcolor">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-                <img class="pic-skating" src="http://scontent.cdninstagram.com/t51.2885-15/e15/11374078_513422715476389_1818592179_n.jpg?ig_cache_key=MTA2NzY4NTkzNjYwNTQyOTAxNw%3D%3D.2"
-                    alt="Yew">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-
-                <h2 class="portfolio-row bio"> Bio </h2>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non molestias aliquam, eius vel saepe error reiciendis
-                    nemo voluptatum necessitatibus quasi distinctio adipisci recusandae, veniam quas velit illum magni. Tempora
-                    adipisci odio optio, eligendi quae labore odit consequuntur non molestiae, doloremque cumque quod autem
-                    similique blanditiis recusandae omnis dolore! Temporibus, magnam. </h4>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum modi suscipit non quae quam, praesentium
-                    sit eveniet quibusdam, soluta blanditiis fugit distinctio. Odio iste mollitia deleniti suscipit quidem
-                    saepe recusandae harum, commodi autem velit porro explicabo assumenda soluta quasi. Fugiat praesentium
-                    laborum, blanditiis dolores quis dolore hic explicabo voluptate minima.
-            </div>
-        </div>
-
-        <div class="row portfolio-row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="portfolio-text"> Portfolio</h2>
-            </div>
-
-
-
-
-
-        </div>
-        <div class="row soapcolor">
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pic-container">
-                <img class="port-pic" src="https://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" alt="">
-                <br>
-                <img class="port-pic" src="http://i.dailymail.co.uk/i/pix/2016/09/06/11/37F60FD200000578-0-image-a-5_1473156426673.jpg" alt="">
-                <br>
-                <img class="port-pic" src="https://c1.staticflickr.com/9/8488/8226533621_a6544cd733_b.jpg" alt="">
-                <br>
-                <img class="port-pic" src="http://www.moheet.com/gallery/2016/moheet_04//20160314_201718_4828.jpg" alt="">
-                <br>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 pic-complainer">
-
-                <img class="port-pic" src="http://xabardor.uz/upload/userfiles/images/ea6c154bd0117f2e8b87a60c6f9d008b.jpg" alt="">
-                <br>
-                <img class="port-pic" src="http://i.dawn.com/primary/2016/02/56cac23a9fb3f.jpg" alt="">
-                <br>
-                <img class="port-pic" src="https://www.look.com.ua/large/201209/42667.jpg" alt="">
-                <br>
-                <img class="port-pic" src="http://4.bp.blogspot.com/-8PQNj9N8MHE/VRFMEY1SHxI/AAAAAAAA0JY/-Ltg4OIZfBk/s1600/uluru-national-park.jpg"
-                    alt="">
-                <br>
-
-            </div>
-        </div>
-        <div class="row portfolio-row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="portfolio-text"> Experience </h2>
-            </div>
-
-
-        </div>
-        <div class="row portfolio-row portfolio-text">
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 html">
-                <h3 class="html-text"> HTML </h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 css">
-                <h3 class="css-text"> CSS
-                    <h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 Java">
-                <h3 class="java-text"> Java-Script </h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 C-sharp">
-                <h3 class="C-sharp-text"> C#
-                    <h/3>
-            </div>
-        </div>
-        <div class="row soapcolor">
-
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <h3> oh yeah</h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 css">
-                <h3 class="css-text"> CSS
-                    <h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 Java">
-                <h3 class="java-text"> Java-Script </h3>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 C-sharp">
-                <h3 class="C-sharp-text"> C#
-                    <h/3>
-            </div>
-        </div>
-        <div class="row portfolio-row portfolio-text">
-            <h2> Click Here For Resume</h2>
-        </div>
-        <div class="row soapcolor contact">
-            <h2> Contact Me! </h2>
+    <div class="topper">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <a href="https://www.linkedin.com/in/alex-whipple-04b4781a/">
-<img class="linked" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="">
-</a>
+                <div class="col-xs-12">
+                    <h1>Alexander Whipple</h1>
+                    <h2>Full Stack Web Developer</h2>
                 </div>
-<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-    <a href="https://github.com/awhip2635">
-    <img  class="git-hub"src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="">
-
-</div>
-
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-xs-12"></div>
+                <div class="col-md-2 col-xs-12">
+                    <a href="#" id="click">
+                        <h5>ABOUT ME</h5>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-12">
+                    <a href="#" id="clicktwo">
+                        <h5>PORTFOLIO</h5>
+                    </a>
+                </div>
+                <div class="col-md-2 col-xs-12">
+                    <a href="#" id="clickthree">
+                        <h5>CONTACT</h5>
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-12"></div>
             </div>
         </div>
     </div>
+
+
+    <div class="pics">
+        <div class="square sq1" id="square">
+            <div class="container">
+                <div class="row row-eq-height">
+                    <h1>ABOUT ME</h1>
+                    <div class="col-xs-12 col-sm-12 col-md-2">
+                        <div class="mecircle">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-10">
+                        <p class="h3font">Hi, I'm Alex! I am a young and motivated individual who is currently seeking entry level development work.
+                            I am a full-stack web developer, 
+                            who is eager to learn and expand my skillset.
+                             I'm also constantly striving to create innovative, well-designed, and creative projects
+                            that are both visually and functionally appealing to the client and user alike. Aside from that,
+                            I love to play music in my freetime.
+                        </p>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+
+                        <div id="langs">
+                            <h4>SKILLS</h4>
+                            <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_512.png" alt="html5" height="55px" width="55px">
+                            <img src="http://www.blackbirdsolutions.com.au/sites/default/files/styles/medium/public/blog/css3-logo.png?itok=r8kt8WZA"
+                                alt="css" height="55px" width="55px">
+                            <img src="https://v4-alpha.getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" height="55px" width="55px">
+                               
+                            <!--<img src="https://www.w3schools.com/angular/pic_angular.jpg" alt="" height="55px" width="55px">-->
+                            <img src="https://vuejs.org/images/logo.png" alt="" height="55px" width="55px">
+                            <img src="https://www.echosteg.com/images/blog/standard/nodejs_logo.png" alt="" height="55px" width="55px">
+                            <img src="https://cdn.codementor.io/assets/tutors/c-sharp-tutors-online.png" alt="" height="55px" width="55px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="projects" id="projects">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1>PORTFOLIO</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box1">
+                            <div class="porte1">
+                                <div id="por1">
+                                    hellodjureightuwighuteaghieuvaeu
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box2">
+                            <div class="porte2">
+                                <div id="por2"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box3">
+                            <div class="porte3">
+                                <div id="por3"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box4">
+                            <div class="porte4">
+                                <div id="por4"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box5">
+                            <div class="porte5">
+                                <div id="por5"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <div id="box6">
+                            <div class="porte6">
+                                <div id="por6"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact" id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h1>CONTACT</h1>
+                    </div>
+                    <div class="col-xs-12 col-md-12">
+                        <div class="meinfo">
+                            <a href="#" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+                            <a href="#" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                            <a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                            <a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 phone">
+                        <h4>Alexander Whipple<br> alexwhipple19@gmail.com<br></h4>
+                    </div>
+            
+
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+        <script src="app.js"></script>
 
 </body>
 
