fixed some stuff

--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Alexander Whipple</h1>
-                    <h2>Full Stack Web Developer</h2>
                 </div>
             </div>
-        </div>
-        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Full Stack Web Developer</h2>
+
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-md-3 col-xs-12"></div>
                 <div class="col-md-2 col-xs-12">
                     <a href="#" id="click">
-                        <h5>ABOUT ME</h5>
+                        <h5>BIO</h5>
                     </a>
                 </div>
                 <div class="col-md-2 col-xs-12">
@@ -49,18 +53,17 @@
         <div class="square sq1" id="square">
             <div class="container">
                 <div class="row row-eq-height">
-                    <h1>ABOUT ME</h1>
+                    <h1>BIO</h1>
                     <div class="col-xs-12 col-sm-12 col-md-2">
-                        <div class="mecircle">
-                        </div>
+
+                        <img class="profileshot" src="Uhh professional.jpg" alt="">
+
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-10">
-                        <p class="h3font">Hi, I'm Alex! I am a young and motivated individual who is currently seeking entry level development work.
-                            I am a full-stack web developer, 
-                            who is eager to learn and expand my skillset.
-                             I'm also constantly striving to create innovative, well-designed, and creative projects
-                            that are both visually and functionally appealing to the client and user alike. Aside from that,
-                            I love to play music in my freetime.
+                        <p class="h3font">Hi, I'm Alex! I am a young and motivated full-stack web developer, who is eager to learn and expand my skillset. I
+                            constantly strive to create innovative, well-designed, and creative projects that are both
+                            visually and functionally appealing to the client and user alike. In my freetime, I love to
+                            play music and cruise around on my skateboard.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12">
@@ -71,102 +74,80 @@
                             <img src="http://www.blackbirdsolutions.com.au/sites/default/files/styles/medium/public/blog/css3-logo.png?itok=r8kt8WZA"
                                 alt="css" height="55px" width="55px">
                             <img src="https://v4-alpha.getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" height="55px" width="55px">
-                               
+
                             <!--<img src="https://www.w3schools.com/angular/pic_angular.jpg" alt="" height="55px" width="55px">-->
                             <img src="https://vuejs.org/images/logo.png" alt="" height="55px" width="55px">
                             <img src="https://www.echosteg.com/images/blog/standard/nodejs_logo.png" alt="" height="55px" width="55px">
                             <img src="https://cdn.codementor.io/assets/tutors/c-sharp-tutors-online.png" alt="" height="55px" width="55px">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/240px-Unofficial_JavaScript_logo_2.svg.png" alt="" height="55px" width="55px;">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
-        <div class="projects" id="projects">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h1>PORTFOLIO</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box1">
-                            <div class="porte1">
-                                <div id="por1">
-                                    hellodjureightuwighuteaghieuvaeu
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box2">
-                            <div class="porte2">
-                                <div id="por2"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box3">
-                            <div class="porte3">
-                                <div id="por3"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box4">
-                            <div class="porte4">
-                                <div id="por4"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box5">
-                            <div class="porte5">
-                                <div id="por5"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div id="box6">
-                            <div class="porte6">
-                                <div id="por6"></div>
-                            </div>
-                        </div>
-                    </div>
+    <div class="projects" id="projects">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>PORTFOLIO</h1>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6">
 
-        <div class="contact" id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h1>CONTACT</h1>
-                    </div>
-                    <div class="col-xs-12 col-md-12">
-                        <div class="meinfo">
-                            <a href="#" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
-                            <a href="#" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-                            <a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                            <a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 phone">
-                        <h4>Alexander Whipple<br> alexwhipple19@gmail.com<br></h4>
-                    </div>
-            
+                    <img class="chord" src="Chord Collab Photo.PNG" alt="">
+
 
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <img class="kanban" src="Vue Kanban.PNG" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <img class="chatroom" src="Chatroom.PNG" alt="">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div id="box4">
+                        <div class="porte4">
+                            <div id="por4"></div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
+    </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-        <script src="app.js"></script>
+    <div class="contact" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>CONTACT</h1>
+                </div>
+                <div class="col-xs-12 col-md-12">
+                    <div class="meinfo">
+                        <a href="#" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                <div class="col-xs-12 phone">
+                    <h4>Alexander Whipple<br> alexwhipple19@gmail.com<br></h4>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="app.js"></script>
 
 </body>
 
