--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p class="h3font">Hi, I'm Alex! I am a young and motivated full-stack web developer, who is eager to learn and expand
                             my skillset. I constantly strive to create innovative, well-designed, and creative projects that
                             are both visually and functionally appealing to the client and user alike. In my freetime, I
-                            love to play music and cruise around on my skateboard.
+                            enjoy playing my guitar.
                         </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12">
