--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row portfol">
                 <div class="col-xs-12 col-sm-6 col-md-6">
 
-                    <a href="https://chordcollab.com/#/">
+                    <a href="http://chord-collab.herokuapp.com/#/">
                         <center>
                             <div>
                                 <h2> Chord Collab </h2>
