--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
                     </strong>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
-                    <h4>Full Stack Web Developer</h4>
-                    <h5>Boise, ID</h5>
+                    <center>
+                        <h4>Full Stack Web Developer</h4>
+                        <h5>Boise, ID</h5>
+
+                    </center>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <center>
