--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
 
                 <h3 class="panel">Hello, I'm Alex! I am a full-stack web developer, who is eager to learn and expand my skillset. My favorite
-                    thing about development is seeing an idea come to life, and the journey it takes to get there. I strive
+                    thing about development is seeing an idea come to life, and the journey in which it takes to get there. I strive
                     to create innovative, and well-designed projects that are both visually and functionally appealing to
                     the client and user alike. In my freetime, I enjoy playing music.
                 </h3>
